[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne"
version = "0.1.0"
description = "Autonomous AI penetration tester"
requires-python = ">=3.14"
license = "GPL-3.0-only"

[tool.setuptools.packages.find]
include = ["pentester*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "N", "UP", "B", "A"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
source = ["pentester"]
omit = ["*/__init__.py"]
